# XCBBuildServiceProxy

./: .gitignore  BUILD.bazel  LICENSE  Package.resolved  Package.swift  README.md  WORKSPACE  repositories.bzl
Docs/: UPDATING.md
Examples/: .bazelrc  WORKSPACE
Examples/BazelProgressXCBBuildService/: BUILD.bazel  Package.resolved  Package.swift
Examples/BazelProgressXCBBuildService/Sources/: BazelBuild.swift  BazelBuildProcess.swift  RequestHandler.swift  main.swift
Examples/BazelXCBBuildService/: BUILD.bazel  Package.resolved  Package.swift  integration_tests.sh  write_shim.sh  write_shim_tests.sh
Examples/BazelXCBBuildService/BEP/src/main/protobuf/: command_line.pb.swift  failure_details.pb.swift  invocation_policy.pb.swift  option_filters.pb.swift
Examples/BazelXCBBuildService/Sources/: BazelBuild.swift  BazelBuildProcess.swift  QueryXcodeVersion.swift  RequestHandler.swift
Sources/MessagePack/: BUILD.bazel  LiteralConvertibles.swift  MessagePack.swift  Pack.swift  README.md  Unpack.swift
Sources/XCBBuildServiceProxy/: BUILD.bazel  BuildContext.swift  Logger.swift
Sources/XCBBuildServiceProxy/Hybrid/: HybridRPCRequestHandler.swift  HybridXCBBuildService.swift  HybridXCBBuildServiceRequestHandler.swift  ProxiedRPCRequestHandler.swift  XCBBuildService.swift
Sources/XCBProtocol/: BUILD.bazel  Logger.swift  PIF.swift
Sources/XCBProtocol/RPC/: RPCPacket.swift  RPCPayload.swift  RPCRequest.swift  RPCResponse.swift
Sources/XCBProtocol_11_3/: BUILD.bazel  RequestPayload.swift  ResponsePayload.swift
Sources/XCBProtocol_11_3/Build Operation/: BuildOperationEnded.swift  BuildOperationPreparationCompleted.swift  BuildOperationProgressUpdated.swift  BuildOperationReportPathMap.swift  BuildOperationStarted.swift  BuildOperationStatus.swift
Sources/XCBProtocol_11_3/Core/: BoolResponse.swift  ErrorResponse.swift  PingResponse.swift  StringResponse.swift
Sources/XCBProtocol_11_3/Indexing Info/: IndexingInfoRequest.swift  IndexingInfoResponse.swift
Sources/XCBProtocol_11_3/Planning Operation/: PlanningOperationDidFinish.swift  PlanningOperationWillStart.swift
Sources/XCBProtocol_11_3/Preview Info/: PreviewInfo.swift  PreviewInfoRequest.swift  PreviewInfoResponse.swift
Sources/XCBProtocol_11_3/Session/: CreateSessionRequest.swift  SetSessionSystemInfoRequest.swift  SetSessionUserInfoRequest.swift  TransferSessionPIFRequest.swift
Sources/XCBProtocol_11_4/: BUILD.bazel  RequestPayload.swift  ResponsePayload.swift
Sources/XCBProtocol_11_4/Build Operation/: BuildOperationEnded.swift  BuildOperationPreparationCompleted.swift  BuildOperationProgressUpdated.swift  BuildOperationReportPathMap.swift  BuildOperationStarted.swift  BuildOperationStatus.swift
Sources/XCBProtocol_11_4/Build Operation/Diagnostic/: BuildOperationDiagnosticComponent.swift  BuildOperationDiagnosticEmitted.swift  BuildOperationDiagnosticKind.swift  BuildOperationDiagnosticLocation.swift
Sources/XCBProtocol_11_4/Build Operation/Task/: BuildOperationConsoleOutputEmitted.swift  BuildOperationTaskEnded.swift  BuildOperationTaskMetrics.swift  BuildOperationTaskStarted.swift  BuildOperationTaskUpToDate.swift
Sources/XCBProtocol_11_4/Core/: BoolResponse.swift  ErrorResponse.swift  PingResponse.swift  StringResponse.swift
Sources/XCBProtocol_11_4/Indexing Info/: IndexingInfoRequest.swift  IndexingInfoResponse.swift
Sources/XCBProtocol_11_4/Planning Operation/: PlanningOperationDidFinish.swift  PlanningOperationWillStart.swift
Sources/XCBProtocol_11_4/Preview Info/: PreviewInfo.swift  PreviewInfoRequest.swift  PreviewInfoResponse.swift
Sources/XCBProtocol_11_4/Session/: CreateSessionRequest.swift  SetSessionSystemInfoRequest.swift  SetSessionUserInfoRequest.swift  TransferSessionPIFRequest.swift
Sources/XCBProtocol_12_0/: BUILD.bazel  ResponsePayload.swift
Sources/XCBProtocol_12_0/Build Operation/Diagnostic/: BuildOperationDiagnosticComponent.swift  BuildOperationDiagnosticEmitted.swift  BuildOperationDiagnosticLocation.swift
Sources/XCBProtocol_12_0/Build Operation/Task/: BuildOperationTaskStarted.swift
Sources/XCBProtocol_12_0/Core/: PingResponse.swift
Sources/XCBProtocol_12_0/Indexing Info/: IndexingInfoRequest.swift
Sources/XCBProtocol_12_0/Session/: SessionCreated.swift  SetSessionUserInfoRequest.swift
Sources/XCBProtocol_12_5/: BUILD.bazel  RequestPayload.swift  ResponsePayload.swift
Sources/XCBProtocol_12_5/Build Operation/: BuildOperationEnded.swift  BuildOperationStatus.swift
Sources/XCBProtocol_12_5/Core/: ErrorResponse.swift  StringResponse.swift
Sources/XCBProtocol_12_5/Indexing Info/: IndexingInfoRequest.swift
Sources/XCBProtocol_12_5/Planning Operation/: PlanningOperationDidFinish.swift
Sources/XCBProtocol_12_5/Preview Info/: PreviewInfo.swift  (+1 more)
Sources/XCBProtocol_13_0/: BUILD.bazel  RequestPayload.swift  ResponsePayload.swift
Sources/XCBProtocol_13_0/Build Operation/: BuildOperationPreparationCompleted.swift  BuildOperationProgressUpdated.swift  BuildOperationReportPathMap.swift
Sources/XCBProtocol_13_0/Build Operation/Diagnostic/: BuildOperationDiagnosticEmitted.swift  BuildOperationDiagnosticKind.swift  BuildOperationDiagnosticLocation.swift
Sources/XCBProtocol_13_0/Build Operation/Task/: BuildOperationConsoleOutputEmitted.swift  BuildOperationTaskEnded.swift  BuildOperationTaskMetrics.swift  BuildOperationTaskStarted.swift  BuildOperationTaskUpToDate.swift
Sources/XCBProtocol_13_0/Core/: BoolResponse.swift
Sources/XCBProtocol_13_0/Indexing Info/: IndexingInfoRequest.swift
Sources/XCBProtocol_13_0/Planning Operation/: PlanningOperationWillStart.swift
Sources/XCBProtocol_13_0/Preview Info/: PreviewInfo.swift  PreviewInfoRequest.swift
Sources/XCBProtocol_13_3/: BUILD.bazel  RequestPayload.swift  ResponsePayload.swift
Tests/MessagePackTests/: ArrayTests.swift  BUILD.bazel  BinaryTests.swift  DescriptionTests.swift  DoubleTests.swift  ExampleTests.swift  ExtendedTests.swift  FalseTests.swift  FloatTests.swift  Helpers.swift  IntegerTests.swift  MapTests.swift  NilTests.swift  StringTests.swift  SubdataTests.swift  TrueTests.swift
(+26 files in other folders)
