load("@build_bazel_rules_swift//swift:swift.bzl", "swift_library", "swift_proto_library")
load("@build_bazel_rules_apple//apple:macos.bzl", "macos_command_line_application")

swift_proto_library(
    name = "build_event_stream_proto",
    deps = ["@build_bazel_bazel//src/main/java/com/google/devtools/build/lib/buildeventstream/proto:build_event_stream_proto"],
)

swift_library(
    name = "BazelProgressXCBBuildService.library",
    module_name = "BazelProgressXCBBuildService",
    srcs = glob(["Sources/**/*.swift"]),
    deps = [
        ":build_event_stream_proto",
        "@com_github_apple_swift_log//:Logging",
        "@com_github_apple_swift_nio//:NIO",
        "@com_github_target_xcbbuildserviceproxy//:XCBBuildServiceProxy",
        "@com_github_target_xcbbuildserviceproxy//:XCBProtocol",
        "@com_github_target_xcbbuildserviceproxy//:XCBProtocol_13_0",
    ],
)

macos_command_line_application(
    name = "BazelProgressXCBBuildService",
    minimum_os_version = "10.15",
    deps = [":BazelProgressXCBBuildService.library"],
)
